@@ -1,9 +1,6 @@
 language: python
 sudo: false
 env:
- - DJANGO_VERSION=1.8
- - DJANGO_VERSION=1.9
- - DJANGO_VERSION=1.10
  - DJANGO_VERSION=1.11
  - DJANGO_VERSION=2.0
  - DJANGO_VERSION=2.1
@@ -20,9 +17,7 @@ install:
  - if [[ $TRAVIS_PYTHON_VERSION == pypy ]]; then pip install -q python-memcached>=1.57; fi
  - if [[ $DJANGO_VERSION != master ]]; then pip install -q "Django>=${DJANGO_VERSION},<${DJANGO_VERSION}.99"; fi
  - if [[ $DJANGO_VERSION == master ]]; then pip install https://github.com/django/django/archive/master.tar.gz; fi
- - if [[ $DJANGO_VERSION == 1* ]]; then pip install django-redis==4.8.0; fi
- - if [[ $DJANGO_VERSION != 1* ]]; then pip install django-redis==4.9.0; fi
- - pip install flake8
+ - pip install django-redis==4.9.0 flake8
 script:
  - ./run.sh test
  - ./run.sh flake8
@@ -38,12 +33,6 @@ matrix:
       env: DJANGO_VERSION=2.1
     - python: "3.4"
       env: DJANGO_VERSION=master
-    - python: "3.6"
-      env: DJANGO_VERSION=1.8
-    - python: "3.6"
-      env: DJANGO_VERSION=1.9
-    - python: "3.6"
-      env: DJANGO_VERSION=1.10
     - python: "pypy"
       env: DJANGO_VERSION=2.0
     - python: "pypy"
