@@ -1,25 +1,21 @@
 [tox]
 envlist =
-    py27-django{18,19,110,111},
-    py34-django{18,19,110,111,20},
-    py35-django{18,19,110,111,20,21,master},
+    py27-django111,
+    py34-django{111,20},
+    py35-django{111,20,21,master},
     py36-django{111,20,21,master},
     py37-django{20,21,master},
-    pypy-django{18,19,110,111}
+    pypy-django111
 
 [testenv]
 deps =
     py{27,py}: python-memcached>=1.57
     py{34,35,36,37}: python3-memcached>=1.51
-    django18: Django>=1.8,<1.9
-    django19: Django>=1.9,<1.10
-    django110: Django>=1.10,<1.11
     django111: Django>=1.11,<1.12
     django20: Django>=2.0,<2.1
     django21: Django>=2.1,<2.2
     djangomaster: https://github.com/django/django/archive/master.tar.gz
-    django{18,19,110,111}: django-redis==4.8.0
-    django{20,21,master}: django-redis==4.9.0
+    django-redis==4.9.0
     flake8
 
 commands =
