@@ -6,7 +6,9 @@ Pending
 =======
 
 - New release notes here.
+- Drop support for Django 1.8, 1.9, and 1.10
 - Fix Django 2.0 compatibility and update documentation
+- Test Django 2.1 support
 
 v1.1.0
 ======
